clusters/k8s-lab/gateway/demo-hello.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-hello
  namespace: envoy-gateway-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-hello
  template:
    metadata:
      labels:
        app: demo-hello
    spec:
      containers:
        - name: whoami
          image: traefik/whoami:v1.10.3
          ports:
            - name: http
              containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: demo-hello
  namespace: envoy-gateway-system
spec:
  selector:
    app: demo-hello
  ports:
    - name: http
      port: 80
      targetPort: http
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: demo-hello
  namespace: envoy-gateway-system
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: eg
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /hello
      backendRefs:
        - group: ""
          kind: Service
          name: demo-hello
          port: 80
          weight: 1
